fix overlap button with timecode

--- a/assets/src/app/colors.less
+++ b/assets/src/app/colors.less
@@ -1,4 +1,5 @@
 
+@tranparent: rgba(0, 0, 0, 0);
 @black: #000;
 @white: #fff;
 @green: #87b209;
