--- a/assets/src/app/player/subtitle.component.less
+++ b/assets/src/app/player/subtitle.component.less
@@ -16,9 +16,13 @@
 	}
 }
 
-.cue,
+.cue {
+	height: 250px;
+	display: inline-block;
+}
+
 .hiddenCue {
-	height: 210px;
+	height: 250px;
 }
 
 .subtitle {
